--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,7 @@ spring.activemq.broker-url=tcp://localhost:61616
 spring.activemq.user=admin
 spring.activemq.password=admin
 spring.activemq.in-memory=true
+
+common.kafka.topic=customer.visit
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id=events
